--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,15 @@
   },
   "dependencies": {
     "@algorandfoundation/algokit-utils": "^6.0.0",
-    "algosdk": "^2.7.0",
+    "@blockshake/defly-connect": "^1.2.1",
+    "@perawallet/connect": "^1.4.2",
+    "@txnlab/use-wallet": "^4.3.1",
+    "@txnlab/use-wallet-react": "^4.3.1",
+    "@walletconnect/modal": "^2.7.0",
+    "@walletconnect/sign-client": "^2.22.4",
+    "algosdk": "^3.5.2",
+    "lute-connect": "^1.6.3",
+    "notistack": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
