--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "backend:start": "cd backend && npm start",
     "frontend:dev": "cd frontend && npm run dev",
     "frontend:build": "cd frontend && npm run build",
-    "install:all": "npm install && cd contracts && npm install && cd ../backend && npm install && cd ../frontend && npm install"
+    "install:all": "npm install && cd contracts && npm install && cd ../backend && npm install && cd ../frontend && npm install",
+    "sanitize:comments": "node ./scripts/strip-comments.mjs"
   },
+  "devDependencies": {
+    "@babel/generator": "^7.26.3",
+    "@babel/parser": "^7.26.3",
+    "fast-glob": "^3.3.2"  },
   "keywords": ["algorand", "blockchain", "chit-fund", "defi"],
   "author": "AlgoChit Team",
   "license": "MIT"
