--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -12,4 +12,4 @@ VITE_ALGOD_PORT=
 VITE_ALGOD_TOKEN=
 
 # Backend API URL
-VITE_API_URL=http://localhost:3000/https://github.com/marotipatre/Hackseries-2-QuickStart-templateapi/chitfund
+VITE_BACKEND_URL=https://yttric-socorro-maniacally.ngrok-free.dev
