--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,9 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "npm install && tsc",
+    "start": "node dist/index.js",
+    "prod": "tsx src/index.ts"
   },
   "dependencies": {
     "@algorandfoundation/algokit-utils": "^6.0.0",
